--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Mapa tipo Google con rutas (Yandex URL)</title>
+  <title>Mapa interactivo con rutas (Yandex URL)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
   <style>
     #map { height: 100vh; width: 100%; }
     #url {
@@ -15,66 +14,76 @@
       background: white;
       padding: 10px;
       z-index: 1000;
-      max-width: 95%;
+      max-width: 90%;
       font-size: 12px;
-      word-break: break-all;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      border-radius: 4px;
+    }
+    #search-container {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      background: white;
+      padding: 8px;
+      width: 300px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+    #search-input {
+      width: 100%;
+      padding: 5px;
+      font-size: 14px;
+    }
+    #suggestions {
+      background: white;
+      border-top: 1px solid #ccc;
+      max-height: 150px;
+      overflow-y: auto;
+      font-size: 14px;
+    }
+    .suggestion {
+      padding: 6px;
+      cursor: pointer;
+    }
+    .suggestion:hover {
+      background: #f0f0f0;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
-  <div id="url">Haz clic en dos puntos o busca una dirección para generar la ruta...</div>
+  <div id="url">Haz clic en dos puntos para generar la ruta...</div>
+  <div id="search-container">
+    <input type="text" id="search-input" placeholder="Buscar dirección en Lima, Perú..." />
+    <div id="suggestions"></div>
+  </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
   <script>
-    const map = L.map("map").setView([-12.1, -77.03], 13);
-
-    // Estilo tipo Google Maps claro (CartoDB Positron)
-    L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
-      attribution: '© OpenStreetMap contributors & CartoDB',
-      subdomains: 'abcd',
-      maxZoom: 20
+    const map = L.map("map").setView([-12.05, -77.05], 13);
+    L.tileLayer("https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png", {
+      attribution: '© OpenStreetMap contributors'
     }).addTo(map);
-
-    // Buscador
-    L.Control.geocoder({
-      defaultMarkGeocode: false,
-      placeholder: 'Buscar dirección...',
-      errorMessage: 'No se encontró el lugar',
-    })
-    .on('markgeocode', function(e) {
-      const center = e.geocode.center;
-      const marker = L.marker(center, { draggable: true }).addTo(map);
-      marker.bindPopup(`Lat: ${center.lat.toFixed(4)}, Lng: ${center.lng.toFixed(4)}`).openPopup();
-      waypoints.push(center);
-      updateRoute();
-    })
-    .addTo(map);
 
     let waypoints = [];
     let control = null;
 
     function buildYandexURL(coords, ptStart, ptEnd) {
-      const format = n => n.toFixed(4);
-      const plCoords = coords.map(c => `${format(c[0])},${format(c[1])}`).join(",");
+      const plCoords = coords.map(c => `${c[0].toFixed(4)},${c[1].toFixed(4)}`).join(",");
       const pl = `pl=c:3C3C3CFF,w:5,${plCoords}`;
-      const pt = `pt=${format(ptStart[0])},${format(ptStart[1])},comma_solid_red~${format(ptEnd[0])},${format(ptEnd[1])},comma_solid_blue`;
+      const pt = `pt=${ptStart[0].toFixed(4)},${ptStart[1].toFixed(4)},comma_solid_red~${ptEnd[0].toFixed(4)},${ptEnd[1].toFixed(4)},comma_solid_blue`;
 
       const lons = coords.map(c => c[0]);
       const lats = coords.map(c => c[1]);
-      const minLon = Math.min(...lons);
-      const maxLon = Math.max(...lons);
-      const minLat = Math.min(...lats);
-      const maxLat = Math.max(...lats);
-      const bbox = `bbox=${format(minLon)},${format(minLat)}~${format(maxLon)},${format(maxLat)}`;
-      const ll = `ll=${format((minLon + maxLon) / 2)},${format((minLat + maxLat) / 2)}`;
+      const minLon = Math.min(...lons).toFixed(4);
+      const maxLon = Math.max(...lons).toFixed(4);
+      const minLat = Math.min(...lats).toFixed(4);
+      const maxLat = Math.max(...lats).toFixed(4);
+      const bbox = `bbox=${minLon},${minLat}~${maxLon},${maxLat}`;
 
-      return `https://tc.mobile.yandex.net/get-map/1.x/?l=map&cr=0&lg=0&scale=1&lang=es&${pt}&${pl}&${bbox}&${ll}&size=500,256`;
+      return `https://tc.mobile.yandex.net/get-map/1.x/?l=map&scale=1&lang=es&${pt}&${pl}&${bbox}&size=500,256`;
     }
 
     function updateRoute() {
@@ -87,6 +96,7 @@
             serviceUrl: "https://router.project-osrm.org/route/v1"
           }),
           show: false,
+          addWaypoints: false
         })
         .on('routesfound', function(e) {
           const latlngs = e.routes[0].coordinates;
@@ -95,7 +105,7 @@
           const ptEnd = coords[coords.length - 1];
           const yandexURL = buildYandexURL(coords, ptStart, ptEnd);
 
-          console.log("🔗 Yandex URL:", yandexURL);
+          map.fitBounds(L.latLngBounds(latlngs));
           document.getElementById("url").innerHTML = `<a href="${yandexURL}" target="_blank">${yandexURL}</a>`;
         })
         .addTo(map);
@@ -112,33 +122,47 @@
           map.removeControl(control);
           control = null;
         }
-        document.getElementById("url").textContent = "Haz clic en dos puntos o busca una dirección para generar la ruta...";
+        document.getElementById("url").textContent = "Haz clic en dos puntos para generar la ruta...";
       }
 
-      const roundedLat = parseFloat(e.latlng.lat.toFixed(4));
-      const roundedLng = parseFloat(e.latlng.lng.toFixed(4));
-      const roundedLatLng = L.latLng(roundedLat, roundedLng);
+      const marker = L.marker(e.latlng, { draggable: true }).addTo(map).bindPopup(
+        `Lat: ${e.latlng.lat.toFixed(4)}<br>Lng: ${e.latlng.lng.toFixed(4)}`
+      ).openPopup();
 
-      const marker = L.marker(roundedLatLng, { draggable: true }).addTo(map);
-      marker.bindPopup(`Lat: ${roundedLat}, Lng: ${roundedLng}`).openPopup();
-
-      waypoints.push(roundedLatLng);
+      waypoints.push(marker.getLatLng());
       updateRoute();
+    });
 
-      marker.on("dragend", function () {
-        const newPos = marker.getLatLng();
-        const updatedPos = L.latLng(
-          parseFloat(newPos.lat.toFixed(4)),
-          parseFloat(newPos.lng.toFixed(4))
-        );
-        const index = waypoints.findIndex(wp =>
-          wp.lat === marker.getLatLng().lat &&
-          wp.lng === marker.getLatLng().lng
-        );
-        waypoints[index] = updatedPos;
-        marker.setLatLng(updatedPos).bindPopup(`Lat: ${updatedPos.lat}, Lng: ${updatedPos.lng}`);
-        updateRoute();
-      });
+    // Buscador con Photon (solo Lima, Perú)
+    const searchInput = document.getElementById('search-input');
+    const suggestionsDiv = document.getElementById('suggestions');
+
+    searchInput.addEventListener('input', function () {
+      const query = searchInput.value.trim();
+      if (query.length < 3) {
+        suggestionsDiv.innerHTML = "";
+        return;
+      }
+
+      fetch(`https://photon.komoot.io/api/?q=${query}&limit=5&lang=es&lat=-12.05&lon=-77.05`)
+        .then(response => response.json())
+        .then(data => {
+          suggestionsDiv.innerHTML = "";
+          data.features.forEach(place => {
+            const suggestion = document.createElement("div");
+            suggestion.className = "suggestion";
+            suggestion.textContent = place.properties.name + ", " + (place.properties.city || "") + ", " + (place.properties.country || "");
+            suggestion.addEventListener("click", () => {
+              const coords = place.geometry.coordinates;
+              const latlng = L.latLng(coords[1], coords[0]);
+              map.setView(latlng, 17);
+              const marker = L.marker(latlng).addTo(map).bindPopup("Ubicación seleccionada").openPopup();
+              suggestionsDiv.innerHTML = "";
+              searchInput.value = "";
+            });
+            suggestionsDiv.appendChild(suggestion);
+          });
+        });
     });
   </script>
 </body>
