--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       const maxLat = Math.max(...lats).toFixed(4);
       const bbox = `bbox=${minLon},${minLat}~${maxLon},${maxLat}`;
 
-      return `https://tc.mobile.yandex.net/get-map/1.x/?l=map&scale=1&lang=es&${pt}&${pl}&${bbox}&size=500,256`;
+      return `https://tc.mobile.yandex.net/get-map/1.x/?l=map&cr=0&lg=0&scale=1&lang=es&${pt}&${pl}&${bbox}&size=500,256`;
     }
 
     function updateRoute() {
