--- a/index.html
+++ b/index.html
@@ -70,24 +70,56 @@
     let waypoints = [];
     let control = null;
 
-    function buildYandexURL(coords, ptStart, ptEnd) {
-      const plCoords = coords.map(c => `${c[0].toFixed(4)},${c[1].toFixed(4)}`).join(",");
-      const pl = `pl=c:3C3C3CFF,w:5,${plCoords}`;
-      const pt = `pt=${ptStart[0].toFixed(4)},${ptStart[1].toFixed(4)},comma_solid_red~${ptEnd[0].toFixed(4)},${ptEnd[1].toFixed(4)},comma_solid_blue`;
+function buildYandexURL(coords, ptStart, ptEnd) {
+  const plCoords = coords.map(c => `${c[0].toFixed(5)},${c[1].toFixed(5)}`).join(",");
+  const pl = `pl=c:3C3C3CFF,w:5,${plCoords}`;
+  const pt = `pt=${ptStart[0].toFixed(4)},${ptStart[1].toFixed(4)},comma_solid_red~${ptEnd[0].toFixed(4)},${ptEnd[1].toFixed(4)},comma_solid_blue`;
 
-      const allCoords = [...coords, ptStart, ptEnd];
-      const lons = allCoords.map(c => c[0]);
-      const lats = allCoords.map(c => c[1]);
-      const padding = 0.006; // ~20 píxeles de margen
+  const allCoords = [...coords, ptStart, ptEnd];
+  const lons = allCoords.map(c => c[0]);
+  const lats = allCoords.map(c => c[1]);
 
-      const minLon = Math.min(...lons).toFixed(5);
-      const maxLon = Math.max(...lons).toFixed(5);
-      const minLat = (Math.min(...lats) + padding).toFixed(5);
-      const maxLat = (Math.max(...lats) + padding).toFixed(5);
-      const bbox = `bbox=${minLon},${minLat}~${maxLon},${maxLat}`;
+  // let padding = 0.004; // ~20 píxeles de margen
+  let padyy = 0.05;
 
-      return `https://tc.mobile.yandex.net/get-map/1.x/?l=map&cr=0&lg=0&scale=1&lang=es&${pt}&${pl}&${bbox}&size=500,256`;
-    }
+  const rawMinLon = Math.min(...lons);
+  const rawMaxLon = Math.max(...lons);
+  const rawMinLat = Math.min(...lats);
+  const rawMaxLat = Math.max(...lats);
+
+  let padding = (Math.abs(rawMaxLat- rawMinLat)/256)*35 ; // ~20 píxeles de margen
+
+
+
+  let minLon, maxLon, minLat, maxLat;
+
+  if (Math.abs(rawMaxLat - rawMinLat) <= 0.01450) {
+    padding = 0.0003;
+    minLon = (rawMinLon ).toFixed(5);
+    maxLon = (rawMaxLon ).toFixed(5);
+    minLat = (rawMinLat - padding/2).toFixed(6);
+    maxLat = (rawMaxLat + 2*padding).toFixed(6);
+   
+  } else {
+    minLon = (rawMinLon ).toFixed(6);
+    maxLon = (rawMaxLon ).toFixed(6);
+    minLat = (rawMinLat).toFixed(6);
+    maxLat = (rawMaxLat + padding).toFixed(6);
+   
+    console.log("minLat:", minLat);
+    console.log("maxLat:", maxLat);
+    console.log(rawMaxLat);
+  }
+
+  const bbox = `bbox=${minLon},${minLat}~${maxLon},${maxLat}`;
+
+  // Ajuste de tamaño dinámico basado en diferencia de latitudes
+  const latDiff = rawMaxLat - rawMinLat;
+  const size = latDiff > 0.045 ? "500,280" : "500,256";  // ← ajusta el umbral si necesitas más precisión
+
+  return `https://tc.mobile.yandex.net/get-map/1.x/?l=map&cr=0&lg=0&scale=1&lang=es&${pt}&${pl}&${bbox}&size=${size}`;
+}
+
 
     function updateRoute() {
       if (control) map.removeControl(control);
